--- a/To-Go/GoogleService-Info.plist
+++ b/To-Go/GoogleService-Info.plist
@@ -17,21 +17,21 @@
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
-	<string>com.Lages.To-Go</string>
+	<string>com.Lens.To-Go</string>
 	<key>PROJECT_ID</key>
 	<string>coffee-7780e</string>
 	<key>STORAGE_BUCKET</key>
 	<string>coffee-7780e.appspot.com</string>
 	<key>IS_ADS_ENABLED</key>
-	<true></true>
+	<true/>
 	<key>IS_ANALYTICS_ENABLED</key>
-	<false></false>
+	<false/>
 	<key>IS_APPINVITE_ENABLED</key>
-	<false></false>
+	<false/>
 	<key>IS_GCM_ENABLED</key>
-	<true></true>
+	<true/>
 	<key>IS_SIGNIN_ENABLED</key>
-	<true></true>
+	<true/>
 	<key>GOOGLE_APP_ID</key>
 	<string>1:948006845846:ios:a0876caf8aded9b3</string>
 	<key>DATABASE_URL</key>
