--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@ Designs/.DS_Store
 To-Go.xcworkspace/xcuserdata/danlages.xcuserdatad/UserInterfaceState.xcuserstate
 To-Go.xcodeproj/xcuserdata/danlages.xcuserdatad/xcschemes/xcschememanagement.plist
 Pods/Pods.xcodeproj/xcuserdata/danlages.xcuserdatad/xcschemes/xcschememanagement.plist
+To-Go.xcworkspace/xcuserdata/danlages.xcuserdatad/UserInterfaceState.xcuserstate
