Add Payment Details Segue Added with Bundle Changes
Add Payment Details Segue implemented to allow for the selection of a payment method - Bundle Changes also added

--- a/MyCoffee.Watch/Info.plist
+++ b/MyCoffee.Watch/Info.plist
@@ -26,7 +26,7 @@
 		<string>UIInterfaceOrientationPortraitUpsideDown</string>
 	</array>
 	<key>WKCompanionAppBundleIdentifier</key>
-	<string>com.Lens.My-Coffee-Bundle</string>
+	<string>com.Lens.My-Coffee-Bundle-App</string>
 	<key>WKWatchKitApp</key>
 	<true/>
 </dict>
