--- a/MyCoffee.Watch Extension/Info.plist
+++ b/MyCoffee.Watch Extension/Info.plist
@@ -25,7 +25,7 @@
 		<key>NSExtensionAttributes</key>
 		<dict>
 			<key>WKAppBundleIdentifier</key>
-			<string>com.Lens.My-Coffee-Bundle.watchkitapp</string>
+			<string>com.Lens.My-Coffee-Bundle-App.watchkitapp</string>
 		</dict>
 		<key>NSExtensionPointIdentifier</key>
 		<string>com.apple.watchkit</string>
